# quantlab

./: .gitignore  .gitmodules  CLAUDE.md  DESIGN.md  DETAIL_DESIGN.md  README.md  README_CN.md  RELEASE_NOTES.md  pyproject.toml
configs/: factors.yaml
docs/: M1_数据管理使用文档.md  M2_因子信号使用文档.md  M3_Kronos信号使用文档.md  M4_RDAgent信号使用文档.md  M5_信号融合使用文档.md  M6_交易执行使用文档.md  agentic_feature_article.html  project_architecture.html
quantlab/: __init__.py  _compat.py  main.py  requirements.txt  setup_and_verify.py
quantlab/agentic/: __init__.py  engine.py  io.py  review_cli.py  reviewers.py  schemas.py
quantlab/configs/: backtest.yaml  backtest_alpha_test.yaml  experiment.yaml  kronos_recipes.yaml  rdagent_evolution.yaml
quantlab/data/: __init__.py  data_download.py  data_export.py  data_manager.py  data_plot.py  data_status.py  data_update.py  data_viewer.py  sector_flow_download.py  sector_flow_features.py  sector_flow_utils.py
quantlab/evaluation/: __init__.py  evaluation.py
quantlab/execution/: __init__.py  execution.py  execution_run.py  execution_status.py
quantlab/risk_control/: __init__.py  risk_control.py
quantlab/signal/: __init__.py  ensemble_combine.py  ensemble_monitor.py  kronos_finetune.py  kronos_recipe_cli.py  rdagent_evolve.py  signal_alpha.py  signal_rdagent.py
quantlab/signals/: ensemble_combine.py  ensemble_monitor.py  factor_mine.py  factor_registry_cli.py  factor_validate.py  kronos_data.py  kronos_experiment.py  kronos_finetune.py  kronos_predict.py  kronos_recipe_cli.py  rdagent_compute.py  rdagent_data.py  rdagent_evolve.py  signal_alpha.py  (+5 more)
(+10 files in other folders)
